--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -45,6 +45,7 @@
         <Compile Include="Day4\Day4.cs" />
         <Compile Include="Day5\Day5.cs" />
         <Compile Include="Day6\Day6.cs" />
+        <Compile Include="Day7\Day7.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
@@ -60,6 +61,8 @@
       <Content Include="Day5\input_test.txt" />
       <Content Include="Day6\input.txt" />
       <Content Include="Day6\input_test.txt" />
+      <Content Include="Day7\input.txt" />
+      <Content Include="Day7\input_test.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
