--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -49,6 +49,7 @@
         <Compile Include="Day08\Day8.cs" />
         <Compile Include="Day09\Day9.cs" />
         <Compile Include="Day10\Day10.cs" />
+        <Compile Include="Day11\Day11.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
@@ -72,6 +73,8 @@
       <Content Include="Day09\input_test.txt" />
       <Content Include="Day10\input.txt" />
       <Content Include="Day10\input_test.txt" />
+      <Content Include="Day11\input.txt" />
+      <Content Include="Day11\input_test.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
