--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -51,8 +51,11 @@
         <Compile Include="Day10\Day10.cs" />
         <Compile Include="Day11\Day11.cs" />
         <Compile Include="Day12\Day12.cs" />
+        <Compile Include="Day13\Day13.cs" />
+        <Content Include="Day13\input.txt" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Content Include="Day13\input_test.txt" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="Day01\input.txt" />
