--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -55,6 +55,8 @@
         <Content Include="Day13\input.txt" />
         <Compile Include="Day14\Day14.cs" />
         <Compile Include="Day15\Day15.cs" />
+        <Compile Include="Day16\Day16.cs" />
+        <Compile Include="Day16\Day16pt2.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Content Include="Day13\input_test.txt" />
@@ -62,6 +64,8 @@
         <Content Include="Day14\input_test.txt" />
         <Content Include="Day15\input.txt" />
         <Content Include="Day15\input_test.txt" />
+        <Content Include="Day16\input.txt" />
+        <Content Include="Day16\input_test.txt" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="Day01\input.txt" />
