--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -56,6 +56,7 @@
         <Compile Include="Day14\Day14.cs" />
         <Compile Include="Day15\Day15.cs" />
         <Compile Include="Day16\Day16.cs" />
+        <Compile Include="Day17\Day17.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Content Include="Day13\input_test.txt" />
@@ -65,6 +66,8 @@
         <Content Include="Day15\input_test.txt" />
         <Content Include="Day16\input.txt" />
         <Content Include="Day16\input_test.txt" />
+        <Content Include="Day17\input.txt" />
+        <Content Include="Day17\input_test.txt" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="Day01\input.txt" />
